Submitting another attempt finally

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		
 	<body>
 		<main class="container-fluid">		
-			<header>
+			<header class="row">
 				<h1>Dawg Pizza</h1>
-				<p class="tag-line">Feeding Hungry Huskies Since 2013</p>	
+				<p class="tag-line">Feeding Hungry Huskies Since 2013</p>
 
 				<nav role="navigation">
 				    <ul>
@@ -23,7 +23,7 @@
 				</nav>
 	        </header>
 
-			<section class="general">
+			<section class="general row" >
 				<div class="col-md-4 col-sm-6">
 				    <h2>Address</h2>
 				    <p><a href="https://goo.gl/maps/CKrRF">4529 University Way NE<br>Seattle, WA 98105</a></p>
@@ -40,7 +40,8 @@
 				</div>
 			</section>
 
-			<section class="menu">
+			<section class="row" id="menu">
+
 				<div class="col-md-12">
 				<h2>Our Menu</h2>
 				</div>
@@ -92,14 +93,14 @@
 				</div>		
 			</section>
 				
-			<section id="about">
+			<section class="row" id="about">
 	   			<h2>About Us</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</section>
 
-			<footer>
+			<footer class="row">
 				<p>&copy; 2014, Dawg Pizza, <a href="mailto:info@dawgpizza.com">info@dawgpizza.com</a></p>	
 				<p><a href="#">Back to Top &uarr;</a></p>
 			</footer>
