--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				</nav>
 	        </header>
 
-			<section class="general row" >
+			<section class="row" id="location">
 				<div class="col-md-4 col-sm-6">
 				    <h2>Address</h2>
 				    <p><a href="https://goo.gl/maps/CKrRF">4529 University Way NE<br>Seattle, WA 98105</a></p>
